src/snapshots/venial__tests__parse_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        name: Ident(
            hello,
        ),
        generic_params: None,
        where_clauses: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    a,
                ),
                ty: [
                    "i32",
                ],
            },
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        returns: Some(
            [
                "String",
            ],
        ),
        abi: "Rust",
        is_unsafe: false,
        is_async: false,
        is_const: false,
    },
)
