src/snapshots/venial__tests__parse_fn_lifetimes.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        qualifiers: FnQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: None,
            tk_unsafe: None,
            tk_extern: None,
            extern_abi: None,
        },
        tk_fn_keyword: Ident(
            fn,
        ),
        name: Ident(
            prototype,
        ),
        generic_params: Some(
            [
                GenericParam {
                    tk_prefix: "'",
                    name: "a",
                    bound: None,
                },
            ],
        ),
        tk_params_parens: (),
        params: [
            Typed(
                FnTypedParam {
                    attributes: [],
                    tk_mut: None,
                    name: Ident(
                        a,
                    ),
                    tk_colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        "&",
                        "'",
                        a,
                        mut,
                        i32,
                    ],
                },
            ),
        ],
        where_clause: None,
        tk_return_arrow: Some(
            [
                Punct {
                    char: '-',
                    spacing: Joint,
                },
                Punct {
                    char: '>',
                    spacing: Alone,
                },
            ],
        ),
        return_ty: Some(
            [
                "&",
                "'",
                a,
                String,
            ],
        ),
        tk_semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
        body: None,
    },
)
