src/snapshots/venial__tests__parse_fn_prototype.snap
---
source: src/tests.rs
assertion_line: 646
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        qualifiers: FunctionQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: None,
            tk_unsafe: None,
            tk_extern: None,
            extern_abi: None,
        },
        name: Ident(
            prototype,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    a,
                ),
                ty: [
                    i32,
                ],
            },
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    f32,
                ],
            },
        ],
        where_clauses: None,
        return_ty: Some(
            [
                String,
            ],
        ),
        body: None,
    },
)
