src/snapshots/venial__tests__parse_fn_self_param-4.snap
---
source: src/tests.rs
expression: func_ref_mut_self
---
Ok(
    Function(
        Function {
            attributes: [],
            vis_marker: None,
            qualifiers: FnQualifiers {
                tk_default: None,
                tk_const: None,
                tk_async: None,
                tk_unsafe: None,
                tk_extern: None,
                extern_abi: None,
            },
            tk_fn_keyword: Ident(
                fn,
            ),
            name: Ident(
                foobar,
            ),
            generic_params: None,
            tk_params_parens: (),
            params: [
                Receiver(
                    FnReceiverParam {
                        attributes: [],
                        tk_ref: Some(
                            Punct {
                                char: '&',
                                spacing: Alone,
                            },
                        ),
                        lifetime: None,
                        tk_mut: Some(
                            Ident(
                                mut,
                            ),
                        ),
                        tk_self: Ident(
                            self,
                        ),
                    },
                ),
            ],
            where_clause: None,
            tk_return_arrow: None,
            return_ty: None,
            tk_semicolon: None,
            body: Some(
                Group {
                    delimiter: Brace,
                    stream: TokenStream [],
                },
            ),
        },
    ),
)
